package DesiginPatternHomework.Bridge;

public interface CoffeeAdditives {
    String add();
}
