package DesiginPatternHomework.Bridge;

// Lemon.java
public class Lemon implements CoffeeAdditives {
    @Override
    public String add() {
        return "加柠檬";
    }
}
