package DesiginPatternHomework.Bridge;

// Sugar.java
public class Sugar implements CoffeeAdditives {
    @Override
    public String add() {
        return "加糖";
    }
}
